# afriklink.com

./: .env.example  .gitignore  .vercelignore  README.md  SECURITY.md  _e2e_pay.mjs  composer.json  package.json  playwright.config.ts  vercel.json
.github/: CODEOWNERS  pull_request_template.md
ai-ops/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ai-ops/afrilink_agents/: __init__.py  base.py  budget.py  cli.py  config.py  db.py  llm.py  models.py  orchestrator.py  pricing.py  registry.py  schema.sql  schemas.py  util.py
ai-ops/afrilink_agents/agents/: competitor_watch.py  growth.py  market_research.py  regulatory_watch.py  security_audit.py  senior_dev.py
ai-ops/scripts/: crontab.example
ai-ops/scripts/git-hooks/: post-commit
ai-ops/tests/: conftest.py  test_budget.py  test_db.py  test_orchestrator.py  test_schemas.py  test_smoke.py
api/: index.php
app/: Request.php  Router.php  bootstrap.php  helpers.php
config/: ads.php  alimentation.php  app.php  apparel.php  artisanat.php  assistant.php  auto.php  beauty.php  bebe.php  countries.php  cuisine.php  currencies.php  delivery.php  dialing_codes.php  electronics.php  geocode.php  help.php  icons.php  kyc.php  legal.php  listings.php  media.php  payment.php  phone.php  pro.php  rayons.php  restaurant.php  routes.php  shop.php  sport.php  translate.php
database/: demo_schema.php  install.sql  install_tables_only.sql  migrate.php  seed_demo.php
docs/: AUDIT.md  SECURITE.md  brief-design-fiches.md
lang/: ar.php  de.php  en.php  es.php  fr.php  it.php  nl.php  pt.php
(+323 files in other folders)
