[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "afrilink-agents"
version = "0.1.0"
description = "Multi-agent AI system driving continuous improvement of the AfriLink marketplace"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
afrilink-agents = "afrilink_agents.cli:main"

[tool.setuptools]
packages = ["afrilink_agents", "afrilink_agents.agents"]

[tool.setuptools.package-data]
afrilink_agents = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
